--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       name="bingbot"
       content="noindex, nofollow, noarchive, nosnippet, noimageindex"
     />
-    <title>비트베이크 (Bitbake) 투자 제안서</title>
+    <title>비트베이크 (Bitbake) 소개서</title>
   </head>
   <body>
     <div id="root"></div>
